--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,18 @@ deploy
 #.swp
 *.*~
 ~*.*
+
+go-admin-en/node_modules
+go-admin-en/package-lock.json
+go-admin-en/.DS_Store
+go-admin-en/.cache
+go-admin-en/.rdoc-dist
+go-admin-en/deploy
+
+go-admin-en/*.bak
+go-admin-en/*.log
+go-admin-en/*.tem
+go-admin-en/*.temp
+#.swp
+go-admin-en/*.*~
+go-admin-en/~*.*
